# context-keeper

./: .gitignore  .mcp.json  Cargo.toml  Instructions.md  Justfile  LICENSE  PRIVACY.md  README.md  integrate-with-claude.md  package.json  pnpm-lock.yaml  run-commands.md  start-services.md  start.sh  stop.sh
.claude-plugin/: plugin.json
apps/ck/: Cargo.toml
apps/ck/src/: main.rs
apps/web/: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  AppSplash.tsx  api.ts  index.css  main.tsx  selran-theme.css  visual.ts
apps/web/src/components/: Browser.tsx  KnowledgeGraph.tsx  MemoriesPanel.tsx  RecallPanel.tsx  SessionPanel.tsx  SettingsPanel.tsx
crates/ck-api/: Cargo.toml
crates/ck-api/src/: lib.rs
crates/ck-chunk/: Cargo.toml
crates/ck-chunk/src/: lib.rs  redact.rs
crates/ck-core/: Cargo.toml
crates/ck-core/src/: lib.rs
crates/ck-daemon/: Cargo.toml
crates/ck-daemon/src/: lib.rs
crates/ck-embed/: Cargo.toml
crates/ck-embed/src/: lib.rs
crates/ck-graph/: Cargo.toml
crates/ck-graph/src/: lib.rs
crates/ck-mcp/: Cargo.toml
crates/ck-mcp/src/: lib.rs
crates/ck-pipeline/: Cargo.toml
crates/ck-pipeline/src/: lib.rs  promote.rs
crates/ck-store/: Cargo.toml
crates/ck-store/src/: lib.rs
crates/ck-summarize/: Cargo.toml
crates/ck-summarize/src/: lib.rs
crates/ck-transcript/: Cargo.toml
crates/ck-transcript/src/: lib.rs
crates/ck-vector/: Cargo.toml
crates/ck-vector/src/: lib.rs
docs/: UNIVERSAL_INGESTION.md
scripts/: auto-recall-hook.sh
