[package]
name = "ck-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ck-core = { workspace = true }
ck-store = { workspace = true }
fastembed = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
