[package]
name = "ck-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ck-core = { workspace = true }
ck-store = { workspace = true }
ck-vector = { workspace = true }
ck-summarize = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
